﻿-- --
* PM popup/ignore options updated, in nmdc a hub is any nick which hasn't sent a hello or myinfo, and a bot is a nick with myinfo
  without connection type
* [bug 125] Fixed out-of-order PM/quit
* [bug 224] Slots are no longer granted to disconnected users, instead disconnection is delayed a minute
* [NMDC] Fixed extra space in chat

-- 0.694 2006-07-10 --
* Fixed crash in certificates page
* [bug 1005] Fixed linux compile issue (thanks tpo)
* [bug 1004] Fixed browse file list on self
* Both .crt and .pem files are read as trusted certificates

-- 0.693 2006-07-09 --
* Fixed crash bug
* Added language code to example language xml

-- 0.692 2006-07-09 --
* [bug 927] Fixed OP detection bug really (thanks pothead)
* [bug 938] Added a few more ADC info fields (thanks ullner)
* [bug 939] Fixed hub info update (thanks ullner)
* [bug 940] Fixed a 64-bit compile error (thanks steven sheehy)
* [bug 942] Fixed atomic operations on unices (thanks tobias nygren)
* [bug 943] Fixed unix utsname compile issue (thanks tobias nygren)
* [bug 944] Fixed unix string conversion bug (thanks tobias nygren)
* [bug 945] Fixed unix mutex initialiser (thanks tobias nygren)
* [bug 946] Tiger hash supports big endian and 64-bit architectures (thanks tobias nygren)
* [bug 941] Updated usercount display (thanks pothead)
* [bug 951] Fixed issue with high port numbers (thanks tpo)
* [bug 958] Search spy tth option automagically saved (thanks ullner)
* [bug 959] Code cleanup (thanks pothead)
* [bug 966] Max hash speed fixed when fast hashing method is not used (thanks steven sheehy)
* [bug 967] Fixed path case-sensitivity issue (thanks steven sheehy)
* Fixed auto-reconnect
* [bug 936] Fixed duplicate entries in search hubs
* Fixed some hub title display issues
* Some spring cleanup
* [bug 970] Unix file permissions correctly set (thanks steven sheehy)
* [ADC] Allowed $ and | in nick/description
* Fixed targetdrive bug for temp target location