@@ -343,6 +343,12 @@ void AdcHub::handle(AdcCommand::STA, AdcCommand& c) throw() {
 	if(!u)
 		return;
 
+	int severity = Util::toInt(c.getParam(0).substr(0, 1));
+	int code = Util::toInt(c.getParam(0).substr(1));
+
+	if(code == AdcCommand::ERROR_BAD_PASSWORD) {
+		setPassword(Util::emptyString);
+	}
 	// @todo Check for invalid protocol and unset TLS if necessary
 	fire(ClientListener::Message(), this, *u, c.getParam(1));
 }
