@@ -38,7 +38,6 @@ public:
 
 	typedef X<0> Connecting;
 	typedef X<1> Connected;
-	typedef X<2> BadPassword;
 	typedef X<3> UserUpdated;
 	typedef X<4> UsersUpdated;
 	typedef X<5> UserRemoved;
@@ -58,7 +57,6 @@ public:
 
 	virtual void on(Connecting, Client*) throw() { }
 	virtual void on(Connected, Client*) throw() { }
-	virtual void on(BadPassword, Client*) throw() { }
 	virtual void on(UserUpdated, Client*, const OnlineUser&) throw() { }
 	virtual void on(UsersUpdated, Client*, const OnlineUser::List&) throw() { }
 	virtual void on(UserRemoved, Client*, const OnlineUser&) throw() { }
