@@ -4,6 +4,8 @@
 * [bug 125] Fixed out-of-order PM/quit
 * [bug 224] Slots are no longer granted to disconnected users, instead disconnection is delayed a minute
 * [NMDC] Fixed extra space in chat
+* [bug 395] Fixed password being blanked
+* [bug 419] Allowed changing case only when moving file in queue
 
 -- 0.694 2006-07-10 --
 * Fixed crash in certificates page
